src/test/ui/suggestions/adt-param-with-implicit-sized-bound.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/adt-param-with-implicit-sized-bound.rs:2:19
   |
LL |     fn func1() -> Struct1<Self>;
   |                   ^^^^^^^^^^^^^ doesn't have a size known at compile-time
...
LL | struct Struct1<T>{
   |                - required by this bound in `Struct1`
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
help: consider further restricting `Self`
   |
LL |     fn func1() -> Struct1<Self> where Self: std::marker::Sized;
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider relaxing the implicit `Sized` restriction
   |
LL | struct Struct1<T: ?Sized>{
   |                 ^^^^^^^^

error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/adt-param-with-implicit-sized-bound.rs:3:23
   |
LL |     fn func2<'a>() -> Struct2<'a, Self>;
   |                       ^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
...
LL | struct Struct2<'a, T>{
   |                    - required by this bound in `Struct2`
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
help: consider further restricting `Self`
   |
LL |     fn func2<'a>() -> Struct2<'a, Self> where Self: std::marker::Sized;
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider relaxing the implicit `Sized` restriction
   |
LL | struct Struct2<'a, T: ?Sized>{
   |                     ^^^^^^^^

error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/adt-param-with-implicit-sized-bound.rs:4:19
   |
LL |     fn func3() -> Struct3<Self>;
   |                   ^^^^^^^^^^^^^ doesn't have a size known at compile-time
...
LL | struct Struct3<T>{
   |                - required by this bound in `Struct3`
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
help: consider further restricting `Self`
   |
LL |     fn func3() -> Struct3<Self> where Self: std::marker::Sized;
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
